fixed removed gap between top body and bottom body

--- a/css/main.css
+++ b/css/main.css
@@ -101,10 +101,8 @@ header .main-header ul li a {
 .grid .body .top-body {
   color: #fff;
   width: 100%;
-  height: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(100px, auto);
   grid-template-areas:
     'tTop tTop tTop tTop tTop tTop tTop tTop tTop tTop tTop tTop'
     'bTop bTop bTop bTop bTop bTop bTop bTop bTop bTop bTop bTop'
@@ -140,7 +138,7 @@ header .main-header ul li a {
   padding: 20px 10px;
   border: 2px #fff solid;
   font-size: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
   color: #fff;
   background-color: #1db83c;
 }
